--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "vue-router": "^3.1.3"
+        "@fortawesome/fontawesome-free": "^5.15.3",
+        "moment": "^2.29.1",
+        "vue-router": "^3.1.3",
+        "vuex": "^3.6.2"
     }
 }
